// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInputWithLimit /> by default matches with snapshot 1`] = `
<div
  className="sc-dkPtRN kuiiTw k-Form-TextInputWithLimit"
>
  <input
    className="sc-bdvvtL iHDzQd k-Form-TextInput k-Form-TextInputWithLimit__input k-Form-TextInput--medium"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="k-Form-TextInputWithLimit__limitNumber"
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`disabled\` prop matches with snapshot 1`] = `
<div
  className="sc-dkPtRN kuiiTw k-Form-TextInputWithLimit"
>
  <input
    className="sc-bdvvtL iHDzQd k-Form-TextInput k-Form-TextInputWithLimit__input k-Form-TextInput--medium k-Form-TextInput--disabled"
    defaultValue=""
    disabled={true}
    name="text"
    onChange={[Function]}
  />
  <div
    className="k-Form-TextInputWithLimit__limitNumber k-Form-TextInputWithLimit__limitNumber--disabled"
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`error\` prop matches with snapshot 1`] = `
<div
  className="sc-dkPtRN kuiiTw k-Form-TextInputWithLimit"
>
  <input
    className="sc-bdvvtL iHDzQd k-Form-TextInput k-Form-TextInputWithLimit__input k-Form-TextInput--medium k-Form-TextInput--error"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="k-Form-TextInputWithLimit__limitNumber"
  >
    80
  </div>
</div>
`;

exports[`<TextInputWithLimit /> with \`size\` prop matches with snapshot 1`] = `
<div
  className="sc-dkPtRN kuiiTw k-Form-TextInputWithLimit"
>
  <input
    className="sc-bdvvtL iHDzQd k-Form-TextInput k-Form-TextInputWithLimit__input k-Form-TextInput--small"
    defaultValue=""
    disabled={false}
    name="text"
    onChange={[Function]}
  />
  <div
    className="k-Form-TextInputWithLimit__limitNumber"
  >
    80
  </div>
</div>
`;
